--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/firestore": "^1.3.0",
     "bulma": "^0.7.4",
+    "firebase": "^5.10.1",
+    "http2": "^3.3.7",
     "marvel-api": "^1.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -26,5 +29,17 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/allisonkopp/Connecting-Miami-to-the-World.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/allisonkopp/Connecting-Miami-to-the-World/issues"
+  },
+  "homepage": "https://github.com/allisonkopp/Connecting-Miami-to-the-World#readme"
 }
